--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "App to share public or write private stories",
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
+  "scripts": "",
   "author": "",
   "license": "ISC",
   "dependencies": {
