--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "App to share public or write private stories",
   "main": "app.js",
-  "scripts": "",
+  "scripts": {
+    "start": "node app.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
